// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UID test UID 1`] = `
<div>
  <span>
    1
  </span>
  <span>
    2
     
    2-uid1
  </span>
</div>
`;

exports[`UID test UID 2`] = `
<div>
  <span>
    key-3
  </span>
  <span>
    key-4
     
    key-4-uid2
  </span>
</div>
`;

exports[`UID test UIDConsumer 1`] = `
Array [
  <span>
    1
  </span>,
  <span>
    2
     
    2-uid1
  </span>,
  <span>
    5
  </span>,
]
`;

exports[`UID test UIDConsumer 2`] = `
Array [
  <span>
    1
  </span>,
  <span>
    1
     
    1-uid1
  </span>,
  <span>
    6
  </span>,
]
`;

exports[`UID test UIDFork 1`] = `
Array [
  <span>
    1-1
  </span>,
  <span>
    1-2
  </span>,
  <span>
    2-1
  </span>,
  <span>
    2-2
  </span>,
  <span>
    3-1
  </span>,
  <span>
    4-1
  </span>,
]
`;

exports[`UID test UIDFork uid 1`] = `
Array [
  <span>
    1-1-uid1
  </span>,
  <span>
    1-2-uid2
  </span>,
  <span>
    1-3-uid1
  </span>,
  <span>
    2-1-uid1
  </span>,
  <span>
    2-2-uid2
  </span>,
  <span>
    2-3-uid1
  </span>,
]
`;
